--- a/Eventures.Services/Eventures.Services.csproj
+++ b/Eventures.Services/Eventures.Services.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="8.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Eventures.Data\Eventures.Data.csproj" />
     <ProjectReference Include="..\Eventures.Domain\Eventures.Domain.csproj" />
   </ItemGroup>
